--- a/ControleDeCadastros/ControleDeCadastros/Views/Contatos/Index.cshtml
+++ b/ControleDeCadastros/ControleDeCadastros/Views/Contatos/Index.cshtml
@@ -11,6 +11,24 @@
         </a>
     </div>
 
+    <br />
+
+    @if(TempData["MensagemSucesso"] != null)
+    {
+        <div class="alert alert-success" role="alert">
+        <button type="button" class="btn btn-danger btn-close"></button>
+            @TempData["MensagemSucesso"]
+    </div>
+    }
+
+    @if(TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+        <button type="button" class="btn btn-danger btn-close"></button>
+            @TempData["MensagemErro"]
+    </div>
+    }
+
     <div class="TitleContatos">
         <h1>Lista de Contatos</h1>
     </div>
